# libgawd

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: gawdConfig.cmake.in
include/libgawd/: config.h.in  types.h  vector.h
include/libgawd/internal/: vector_base.h
